--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "chart.js": "^2.7.2",
     "css-loader": "^1.0.0",
     "electron": "^2.0.5",
     "html-webpack-plugin": "^3.2.0",
