--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "webpack-dev-server": "^3.1.5"
   },
   "dependencies": {
+    "d3-geo": "^1.10.0",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "topojson-client": "^3.0.0"
   }
 }
